--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
   "minimum-stability": "dev",
   "autoload": {
     "psr-4": { "Adolfocuadros\\NubefactClient\\": "src/" }
+  },
+  "require": {
+    "guzzlehttp/guzzle": "^6.3@dev"
   }
 }
